# grid-mapper

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  grid_mapper.cpp  grid_mapper.h  grid_mapper_io.cpp  grid_mapper_io.h  plot.cpp
test/: CMakeLists.txt  test_grid_mapper.cpp  test_grid_mapper_io.cpp  test_plot.cpp
test/data/: grid1.txt  grid2.txt
